--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,15 @@
     Welcome to {{ title }}!
   </h1>
   <mat-checkbox>Check me!</mat-checkbox>
+  <p>
+  <mat-form-field class="example-full-width">
+    <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+    <mat-datepicker-toggle matSuffix [for]="picker">
+      <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
+    </mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+  </p>
 </div>
 
 
