--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,41 @@
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
   </p>
+
+  <form class="example-form">
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="Favorite food" value="Sushi">
+    </mat-form-field>
+
+
+    <mat-form-field class="example-full-width">
+      <textarea matInput placeholder="Leave a comment"></textarea>
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <input matInput #message maxlength="256" placeholder="Message">
+      <mat-hint align="start"><strong>Don't disclose personal info</strong> </mat-hint>
+      <mat-hint align="end">{{message.value.length}} / 256</mat-hint>
+    </mat-form-field>
+    <p>
+    <mat-radio-group>
+      <mat-radio-button value="1">Option 1</mat-radio-button>
+      <mat-radio-button value="2">Option 2</mat-radio-button>
+    </mat-radio-group>
+    </p>
+    <p>
+    <mat-form-field>
+      <mat-select placeholder="Favorite food">
+        <mat-option *ngFor="let food of foods" [value]="food.value">
+          {{food.viewValue}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    </p>
+    <p>
+    <mat-slider></mat-slider>
+    </p>
+  </form>
+
 </div>
 
 
