--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,13 @@ body {
   font-size: 8pt;
   float: right;
 }
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
